# Plasmacoin-Blockchain

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  PCConfig.h  PCConfig.h.in  go.mod  go.sum  main.go
blockchainconstructs/: bcdata.go  block.go  idcode.go  nodedata.go  nodelist.go  packettype.go  pendingtrxn.go  receipt.go  removalrequest.go  signature.go  syncrequest.go  transaction.go  userquery.go
c/: goexports.go  goexports.h  pcnetworkd.h
cgo/: pcnetworkd.go
daemon/: daemon.cpp  pcnetworkd.go  pcnetworkd.h
daemon/daemonctl/: plasmacoin-daemon.plist  plasmacoin-daemon.service
handler/: handler.go  parser.go
netdial/: netdial.go
netlisten/: netlisten.go
netutils/: compression.go  netutils.go  parser.go  upnp.go
src/: .editorconfig  bcdata.hpp  block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  cryptocpp-sha256-libs.h  dat-fs.cpp  dat-fs.hpp  declare-beta-release.h  dssize.cpp  dssize.hpp  enums.h  getglobip.py  hashing.cpp  hashing.hpp  idcode.hpp  main.cpp  merkle-helpers.c  merkle-helpers.cpp  merkle-helpers.h  mining.cpp  mining.hpp  net-constants.hpp  node-data.hpp  node.cpp  node.hpp  notification.cpp  notification.hpp  packet-types.h  parse-json.cpp  parse-json.hpp  pending-trxn.hpp  receipt.cpp  receipt.hpp  removal-request.hpp  rsa-fs.cpp  rsa-fs.hpp  rsautil.cpp  rsautil.hpp  (+19 more)
src/.wip-sha256/: SHA256-Makefile.mk  sha256
src/net/c/: compression.h  (+5 more)
src/qt/: resources.qrc
src/sha256/: SHA256-Makefile.mk  constants.h  helpers.h  helpers.hpp  sha256.cpp  sha256.hpp
tcpnet/: netdial.go  netlisten.go
util/: compression.go
(+86 files in other folders)
